@@ -244,6 +244,7 @@ wxGTK:
 - Support underlined fonts in wxTextCtrl.
 - Support all border styles; wxListBox honours the borders now.
 - wxWindow and wxScrolledWindow now generate line, page and thumb-release scroll events.
+- Added file preview support in file dialogs.
 
 wxMac:
 
